--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>React App</title>
   </head>
   <body>
+    <div id="quickNav">Menu</div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1 style="text-align: center; color: blueviolet">Learning React!!!</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
